Code smoothing